Bug 393282 - Changing inactive colour effects switches to disabled colour effects
Summary: Changing inactive colour effects switches to disabled colour effects
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Matthew Woehlke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-19 08:08 UTC by skaumo
Modified: 2019-03-08 09:39 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description skaumo 2018-04-19 08:08:08 UTC
Changes to inactive colours cause disabled colours settings to appear.

1 Open System settings -> Colours
2 Choose a colour scheme, press "Edit Scheme"
3 On the "Options" tab tick "Apply inactive window colour effects"
4 The "Inactive" tab appears
5 Switch to the "Inactive" tab and try to move the slider controls

Result: The "Disabled" tab is activated

Expected: Slider controls to reflect the desired changes.

This makes it impossible to change inactive window colours.
Comment 1 Patrick Silva 2018-04-22 19:29:32 UTC
Reproducible on Arch Linux, plasma 5.12.4.
Comment 2 Michael D 2019-02-07 10:38:41 UTC
Reproducible also on Manjaro, Plasma 5.14.5.
Comment 3 JanKusanagi 2019-03-06 18:41:22 UTC
Still happening in Mageia, with Plasma 5.15.1, but AFAIK someone's looking into it, and they've already found the cause \o/
Comment 4 Kai Uwe Broulik 2019-03-08 09:39:22 UTC
Git commit 45f10322b8f33b7f7a38e3a1cafdbbc030a484c4 by Kai Uwe Broulik.
Committed on 08/03/2019 at 09:37.
Pushed by broulik into branch 'Plasma/5.15'.

[kcolorschemeditor] Don't re-add existing tab

This keeps it from unexpectedly changing tabs as you change any values.
FIXED-IN: 5.15.3

Differential Revision: https://phabricator.kde.org/D19572

M  +7    -7    kcms/colors/scmeditordialog.cpp

https://commits.kde.org/plasma-desktop/45f10322b8f33b7f7a38e3a1cafdbbc030a484c4