[kcolorschemeditor] Don't re-add existing tab

This keeps it from unexpectedly changing tabs as you change any values.

BUG: 393282
FIXED-IN: 5.15.3

Differential Revision: https://phabricator.kde.org/D19572